examples/errors/27_delete_invalid_type/delete_invalid_type.txy
struct Node
    value: int;
endstruct;

proc main()
    println("=================== PROBLEMA 06 ===================");
    var count: int = 5;
    delete(count);
endproc;
